Fixed CSS
Fixed CSS Issue where options went off screen

--- a/style.css
+++ b/style.css
@@ -23,76 +23,107 @@ p {
   padding-bottom: 30px;
   margin: auto;
   width: 550px;
-
 }
- #header li {
-   text-align: left;
- }
 
- #line2 {
-   display: block;
-   text-align: left;
-   margin-left: 20px;
- }
+#header li {
+  text-align: left;
+}
 
- #multiplechoice {
-   text-align: left;
-   margin: auto;
-   width: 350px;
-   padding-top: 35px;
-   padding-bottom: 50px;
+#line2 {
+  display: block;
+  text-align: left;
+  margin-left: 20px;
+}
 
- }
+#multiplechoice {
+  text-align: left;
+  margin: auto;
+  width: 50%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  top: 100px;
+  left: 25%;
+  position: absolute;
+}
 
- #answerbox{
-   text-align: center;
-   margin: auto;
-   width: 550px;
-   padding-top: 35px;
-   padding-bottom: 50px;
-   width: 99%;
+#answerbox {
+  /* border-color: white;
+  border-style: dotted;
+  text-align: center;
+  margin: auto;
+  width: 550px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  left: 25%;
+  position: absolute;
+  width: 350px; */
+  text-align: left;
+  margin: auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  top: 100px;
+  left: 25%;
+  text-align: center;
+  position: absolute;
+  width: 50%;
+}
 
- }
+#cardPrompt {
+  text-align: center;
+  position: absolute;
+  width: 50%;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  top: 50px;
+  left: 25%
+}
 
- #cardPrompt {
-   text-align: center;
-   position: relative;
-   width: 99%;
-   color: white;
-   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
- }
+#buttons {
+  text-align: center;
+  padding-top: 20px;
+  width: 98%;
+}
+#results {
+  text-align: center;
+  margin: auto;
+  top: 350px;
+  left: 25%;
+  width: 50%;
+  text-align: center;
+  position: absolute;
+}
 
- #buttons{
-   text-align: center;
-   padding-top: 20px;
-   width: 98%;
- }
+#mainBody {
+  text-align: center;
+  width: 50%;
+  left: 25%;
+}
 
- .answerBoxFormat{
-   resize: none;
- }
+.answerBoxFormat {
+  resize: none;
+}
 
 #score {
   color: white;
-  margin-left: 10px;
-  margin-right: 10px;
   border-style: groove;
   border-color: lightgrey;
   border-width: medium;
-  width: 99%;
+  width: 50%;
+  position: absolute;
+  left: 25%
 }
+
 #scoreBox {
   margin-left: 750px;
   margin-right: 750px;
   top: 50px;
 }
 
-#mainBody{
+#mainBody {
   top: 250px;
   position: fixed;
   right: 50px;
 }
-
 
 /* Dropdown Button */
 .dropbtn {
@@ -105,12 +136,12 @@ p {
   border: none;
 }
 
-#dropMenu{
+#dropMenu {
   position: relative;
   margin: auto;
 }
 
-#text{
+#text {
   position: fixed;
   top: 150px;
 }
@@ -130,7 +161,7 @@ p {
   right: inherit;
   background-color: #282828;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -144,15 +175,16 @@ p {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: black;}
+.dropdown-content a:hover {
+  background-color: black;
+}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: lightgrey;}
-
-#results {
-  padding-top: 10px;
-  text-align: center;
+.dropdown:hover .dropbtn {
+  background-color: lightgrey;
 }
